objects/Opportunity_Relationships__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Broker, TPA or PBM Contact</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokerage Firm Contact, General Contact</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Relationships</relationshipLabel>
        <relationshipName>Opportunity_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firm_Type__c</fullName>
        <formula>Firm__r.RecordType.Name</formula>
        <label>Firm Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Brokerage, TPA or PBM</inlineHelpText>
        <label>Firm</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Firm Must Be: Brokerage, PBM or TPA</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brokerage Firm, PBM, TPA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Relationships</relationshipLabel>
        <relationshipName>Opportunity_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Relationships</relationshipLabel>
        <relationshipName>Opportunity_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Opportunity Relationship</label>
    <nameField>
        <displayFormat>OppRel-{000000}</displayFormat>
        <label>Relationship #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>